<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2014 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- O-Click settings -->
    <string name="oclick_panel_title" translatable="false">O-Click</string>

    <string name="oclick_connect_string">Connect</string>
    <string name="oclick_disconnect_string">Disconnect</string>
    <string name="oclick_summary_connected">Connected to O-Click</string>
    <string name="oclick_summary_paired">O-Click paired, but disconnected</string>
    <string name="oclick_dialog_title" translatable="false">O-Click</string>
    <string name="oclick_dialog_connecting_message">Connecting to O-Click\u2026\nPress the O-Click button to speed up discovery.</string>
    <string name="oclick_take_snapshot_title">Remote camera shutter</string>
    <string name="oclick_take_snapshot_summary">Single click to take picture</string>
    <string name="oclick_find_my_phone_title">Phone locator</string>
    <string name="oclick_find_my_phone_summary">Double click to find phone</string>
    <string name="oclick_fence_title">Proximity alert</string>
    <string name="oclick_fence_summary">Alert when not near phone</string>
    <string name="oclick_disconnect_alert_title">Out of range alert</string>
    <string name="oclick_disconnect_alert_summary">Alert when outside of reach</string>

    <string name="alert_category_title">Alerts</string>
    <string name="action_category_title">Actions</string>

    <!-- O-Click notification -->
    <string name="oclick_locator_notification_title">O-Click phone locator</string>
    <string name="oclick_locator_notification_text">Locator alert is playing. Tap to dismiss</string>
    <string name="oclick_notification_title_connected">O-Click connected</string>
    <string name="oclick_notification_title_disconnected">O-Click disconnected</string>
    <string name="oclick_notification_content_disconnected">Press the O-Click button to reconnect</string>

    <!-- Notification slider -->
    <string name="notification_slider_category_title">Notification slider</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_none">None</string>
</resources>
